# ChangeLog for net-analyzer/netcat
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netcat/ChangeLog,v 1.17 2003/08/18 20:36:28 mholzer Exp $

  18 Aug 2003; Martin Holzer <mholzer@gentoo.org> netcat-110-r1.ebuild,
  netcat-110-r2.ebuild, netcat-110-r3.ebuild:
  Upated SRC_URI and HP.

*netcat-110-r3 (08 Apr 2003)

  28 Jul 2003; Guy Martin <gmsoft@gentoo.org> netcat-110-r3.ebuild :
  Marked stable on hppa.

  08 Apr 2003; Guy Martin <gmsoft@gentoo.org> netcat-110-r3.ebuild, files/digest-netcat-110-r3 :
  Added ipv6 support. Added support for the static use flag. Added ~hppa to KEYWORDS.
  Added the IUSE variable.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*netcat-110-r2 (22 Oct 2002)

  15 Dec 2002; Bjoern Brauel <bjb@gentoo.org> netcat-110-r2.ebuild :
  Add alpha to KEYWORDS

  22 Oct 2002; Seemant Kulleen <seemant@gentoo.org> netcat-110-r2.ebuild
  files/digest-netcat-110-r2 :

  Undid the previous change.  Closes bug #9522 by tester@videotron.ca
  (Olivier Crete)

*netcat-110-r1 (22 Oct 2002)

  22 Apr 2003; Brandon Low <lostlogic@gentoo.org> netcat-110-r1.ebuild:
  Change supersed dependencies

  22 Oct 2002; Seemant Kulleen <seemant@gentoo.org> netcat-110-r1.ebuild
  files/digest-netcat-110-r1 :

  Updated the SRC_URI to reflect the new homepage. Thanks to:
  alan@jasomi.com (Alan Hawrylyshen) in bug #9500.

  Changed the order of the sed statements as the nc->netcat change in the
  Makefile screwed people's CFLAGS.  Thanks to: Bulletz_1900@hotmail.com
  (Dries Harnie) in bug #9479 by shadow@ines.ro

  The executable is now installed as /usr/bin/netcat instead of /usr/bin/nc
  which conflicted with /usr/bin/nc from app-editors/nedit.  Closes bug
  #6370 by Klaus.Kusche@inode.at (Klaus Kusche)

*netcat-110 (1 Feb 2002)

  30 Aug 2002; Seemant Kulleen <seemant@gentoo.org> netcat-110.ebuild :
