@@ -1,0 +1,3 @@
+MD5 402632f2fe01c169ff19a0ad6e9d608c nc110.tgz 75267
+MD5 84d850745dd860aedce64b518e0e3330 nc-v6-20000918.patch.gz 8740
+MD5 67eb99f4d005b7f2210f1731636de4a2 netcat-110-deb-patches.tbz2 8457
